--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "commerce-integration-server",
-  "version": "1.0.0",
+  "name": "node-js-getting-started",
+  "version": "0.3.0",
+  "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "12.x"
+    "node": "10.x"
   },
-  "description": "This is a node js server used to mock integration for B2B / D2C Salesforce Commerce Cloud sites.",
   "main": "index.js",
-  "author": "Shane-Smyth",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-xml-bodyparser": "^0.3.0",
-    "fs": "^0.0.1-security",
-    "jsforce": "^1.11.1",
-    "path": "^0.12.7",
-    "pg": "^8.7.1",
-    "randomstring": "^1.2.1",
-    "sf-jwt-token": "^1.3.0",
-    "uuid": "^8.3.2"
-  }
+    "ejs": "^2.5.6",
+    "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
